# HRpQCT-Knee-Seg

./: README.md  setup.cfg
hrkneeseg/atlas/: combine_roi_masks.py
hrkneeseg/automation/: common.py  crosssectional.py  longitudinal.py  parser.py  write_slurm_script.py
hrkneeseg/training/final/: train_segan_final.py  train_segresnetvae_final.py  train_unet_final.py
hrkneeseg/training/knee_cv/: train_segan_knee_cv.py  train_segresnetvae_knee_cv.py  train_unet_knee_cv.py
tests/: config_cli.py
tests/test_cli/: test_cli_setup.py
