[metadata]
name = hrkneeseg
author = Nathan J. Neeteson
author-email = njneetes@ucalgary.ca
summary = CL utilities for deep learning segmentation of HR-pQCT knee images
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/Bonelab/HRpQCT-Knee-Seg
project_urls =
    Source Code = https://github.com/Bonelab/HRpQCT-Knee-Seg
license = GPL-v3
classifier =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Programming Language :: Python
keywords =
    medical
    imaging

[entry_points]

[pbr]
skip_changelog = 1
skip_authors = 1
